--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ anyhow = "1.0"
 chrono = "0.4"
 derive_more = "0.99"
 rand = "0.8"
+once_cell = "1.9"
 
 [patch.crates-io]
 evdev-rs = { path = "../evdev-rs" }
